[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/FontLarge.tres" type="DynamicFont" id=1]
[ext_resource path="res://TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://UI/MainUITheme.tres" type="Theme" id=3]
[ext_resource path="res://UI/FontMedium.tres" type="DynamicFont" id=4]

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 640.0
margin_bottom = 360.0
rect_min_size = Vector2( 4, 4 )
mouse_filter = 2
color = Color( 0.329412, 0.454902, 0.607843, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="."]
margin_left = 192.0
margin_top = 40.0
margin_right = 448.0
margin_bottom = 88.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 1 )
text = "Game Title"
align = 1

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 192.0
margin_top = 152.0
margin_right = 448.0
margin_bottom = 222.0
theme = ExtResource( 3 )
custom_constants/separation = 24
alignment = 1

[node name="PlayButton" type="Button" parent="Menu"]
unique_name_in_owner = true
margin_right = 256.0
margin_bottom = 56.0
rect_min_size = Vector2( 80, 56 )
custom_fonts/font = ExtResource( 4 )
text = "Play"

[node name="ControlsButton" type="Button" parent="Menu"]
unique_name_in_owner = true
margin_top = 80.0
margin_right = 256.0
margin_bottom = 136.0
rect_min_size = Vector2( 80, 56 )
custom_fonts/font = ExtResource( 4 )
text = "Controls"

[connection signal="pressed" from="Menu/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Menu/ControlsButton" to="." method="_on_ControlsButton_pressed"]
